fixed collapsed navbar color

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,12 @@ $navbar-default-bg: #0984e3;
     // box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),
     //         0 4px 20px 0 rgba(0,0,0,0.19);
 }
+
+#bs-example-navbar-collapse-1 {
+    background-color: #0984e3;
+}
+
+
 .navbar-default .navbar-nav > li > a {
     color: #fff;
     font-weight: 500;
